[gd_scene load_steps=2 format=3 uid="uid://deva3qdr8h12x"]

[ext_resource type="Script" path="res://properties/sector_components/stoudson_bomb/stoudson_bomb_section.gd" id="1_gtxed"]

[node name="StoudsonBombSection" type="VBoxContainer"]
alignment = 1
script = ExtResource("1_gtxed")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="BombInfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Stoudson bomb N"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Bomb building:"

[node name="BombBuildingOptionButton" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Normal"
popup/item_1/text = "Parasite(set 6 only)"
popup/item_1/id = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Bomb countdown:"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HoursSpinBox" type="SpinBox" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 24.0
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "hours"

[node name="MinutesSpinBox" type="SpinBox" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 999999.0
alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "minutes"

[node name="SecondsSpinBox" type="SpinBox" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 999999.0
alignment = 1

[node name="Label4" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "seconds"

[node name="BombKeySectorsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "This bomb contains key sectors:"
horizontal_alignment = 1

[node name="BombKeySectorsListContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="TestLabel" type="Label" parent="BombKeySectorsListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Key sector 1 at X: x Y: y"
horizontal_alignment = 1

[node name="TestLabel2" type="Label" parent="BombKeySectorsListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Key sector 2 at X: x Y: y"
horizontal_alignment = 1
